--- a/Research_env/Perceptron Implementation.ipynb
+++ b/Research_env/Perceptron Implementation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "15faffde",
+   "id": "69cbff21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "308e9ea9",
+   "id": "b9ac2b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a51fca8f",
+   "id": "eba58085",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.77701823,  0.57798473, -0.10292864])"
+       "array([-2.186259  , -0.55175425,  0.75599605])"
       ]
      },
      "execution_count": 2,
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f4e287b5",
+   "id": "c5e503e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "    def fit(self,X,y):\n",
     "        self.X = X\n",
     "        self.y =y\n",
-    "        X_with_bias = np.c_[self.X, -np.ones(len(self.X),1)]  \n",
+    "        X_with_bias = np.c_[self.X, -np.ones((len(self.X),1))]  \n",
     "        print(f\"X with bias:\\n{X_with_bias}\")\n",
     "        "
    ]
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f276471",
+   "id": "a13091b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +79,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5592039c",
+   "id": "f81d20e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-4.95918257e-05,  1.17003998e-04, -3.21255114e-05])"
+       "array([6.42644639e-05, 1.43124307e-05, 2.89481507e-05])"
       ]
      },
      "execution_count": 5,
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f25e88ef",
+   "id": "49fb7635",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c15c9383",
+   "id": "de5e212e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3bf92356",
+   "id": "a1eeb1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3b691f91",
+   "id": "d78c4e6f",
    "metadata": {},
    "outputs": [
     {
@@ -168,20 +168,18 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "83a30f67",
+   "id": "84fcf843",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot interpret '1' as a data type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14248\\1309316948.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14248\\3829582631.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[0mX_with_bias\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"X with bias:\\n{X_with_bias}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\OneDrive\\Desktop\\Deep Learning\\Day2\\env1\\lib\\site-packages\\numpy\\core\\numeric.py\u001b[0m in \u001b[0;36mones\u001b[1;34m(shape, dtype, order, like)\u001b[0m\n\u001b[0;32m    202\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_ones_with_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlike\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlike\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    203\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 204\u001b[1;33m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mempty\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    205\u001b[0m     \u001b[0mmultiarray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopyto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcasting\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'unsafe'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    206\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: Cannot interpret '1' as a data type"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X with bias:\n",
+      "[[ 1. -1.]\n",
+      " [ 1. -1.]\n",
+      " [ 1. -1.]\n",
+      " [ 1. -1.]]\n"
      ]
     }
    ],
@@ -192,7 +190,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f9de64",
+   "id": "c27af874",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc10826f",
    "metadata": {},
    "outputs": [],
    "source": []
