--- a/Research_env/Perceptron Implementation.ipynb
+++ b/Research_env/Perceptron Implementation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69cbff21",
+   "id": "8349120d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ac2b33",
+   "id": "fc65310b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eba58085",
+   "id": "df138edf",
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c5e503e3",
+   "execution_count": 11,
+   "id": "d558863c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,18 +58,424 @@
     "        self.eta = eta\n",
     "        self.epochs =epochs\n",
     "        \n",
+    "    def _z_outcome(self, inputs, weights):\n",
+    "        return np.dot(inputs, weights)\n",
+    "    \n",
+    "    def activation_function(self, z):\n",
+    "        return np.where(z > 0, 1, 0)\n",
+    "        \n",
     "    def fit(self,X,y):\n",
     "        self.X = X\n",
     "        self.y =y\n",
     "        X_with_bias = np.c_[self.X, -np.ones((len(self.X),1))]  \n",
     "        print(f\"X with bias:\\n{X_with_bias}\")\n",
-    "        "
+    "        \n",
+    "        for epoch in range(self.epochs):\n",
+    "            print(\"--\"*10)\n",
+    "            print(f\"for epoch >> {epoch + 1}\")\n",
+    "            print(\"--\"*10)\n",
+    "            \n",
+    "            z = self._z_outcome(X_with_bias, self.weights)\n",
+    "            y_hat = self.activation_function(z)\n",
+    "            print(f\"predicted value after forward pass: \\n{y_hat}\")\n",
+    "            \n",
+    "            self.error = self.y - y_hat\n",
+    "            print(f\"error: \\n{self.error}\")\n",
+    "            \n",
+    "            self.weights = self.weights + self.eta * np.dot(X_with_bias.T, self.error)\n",
+    "            print(f\"updated weights after epoch: {epoch + 1}/{self.epochs}: \\n{self.weights}\")\n",
+    "            print(f\"##\"*10)\n",
+    "            \n",
+    "            \n",
+    "    def predict(self, X):\n",
+    "        X_with_bias = np.c_[X, -np.ones((len(X), 1))]\n",
+    "        z = self._z_outcome(X_with_bias, self.weights)\n",
+    "        return self.activation_function(z)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "01c8cd2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2  y\n",
+       "0   0   0  0\n",
+       "1   0   1  1\n",
+       "2   1   0  1\n",
+       "3   1   1  1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "OR = {\n",
+    "    \"x1\": [0,0,1,1],\n",
+    "    \"x2\": [0,1,0,1],\n",
+    "    \"y\" : [0,1,1,1]\n",
+    "}\n",
+    "\n",
+    "df_OR = pd.DataFrame(OR)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a404f2bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2  y\n",
+       "0   0   0  0\n",
+       "1   0   1  1\n",
+       "2   1   0  1\n",
+       "3   1   1  1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "af25e458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_data(df, target_col=\"y\"):\n",
+    "    X = df.drop(target_col, axis=1)\n",
+    "    y = df[target_col]\n",
+    "    \n",
+    "    return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "db122635",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X with bias:\n",
+      "[[ 0.  0. -1.]\n",
+      " [ 0.  1. -1.]\n",
+      " [ 1.  0. -1.]\n",
+      " [ 1.  1. -1.]]\n",
+      "--------------------\n",
+      "for epoch >> 1\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 0 0 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    1\n",
+      "2    1\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 1/10: \n",
+      "[ 0.10010803  0.10006025 -0.1998502 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 2\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 2/10: \n",
+      "[ 0.10010803  0.10006025 -0.0998502 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 3\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[1 1 1 1]\n",
+      "error: \n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 3/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 4\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 4/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 5\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 5/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 6\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 6/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 7\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 7/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 8\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 8/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 9\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 9/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n",
+      "--------------------\n",
+      "for epoch >> 10\n",
+      "--------------------\n",
+      "predicted value after forward pass: \n",
+      "[0 1 1 1]\n",
+      "error: \n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after epoch: 10/10: \n",
+      "[0.10010803 0.10006025 0.0001498 ]\n",
+      "####################\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = prepare_data(df_OR)\n",
+    "\n",
+    "ETA = 0.1\n",
+    "EPOCHS = 10\n",
+    "\n",
+    "model_or = Perceptron(eta=ETA, epochs=EPOCHS)\n",
+    "\n",
+    "model_or.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84e3755f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be7d385",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19dfa8ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "841a5830",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "a13091b5",
+   "id": "19e03b79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f81d20e7",
+   "id": "f6209b6f",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "49fb7635",
+   "id": "79eaa896",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de5e212e",
+   "id": "ea7aec4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a1eeb1c1",
+   "id": "67a7c978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d78c4e6f",
+   "id": "55788d5a",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "84fcf843",
+   "id": "b97a7ff1",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27af874",
+   "id": "c81198a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc10826f",
+   "id": "97076129",
    "metadata": {},
    "outputs": [],
    "source": []
